# South_Africa_Accident_Scraper

./: .gitignore  README.md  main.py  note.txt  pyproject.toml  requirements.txt  test_notebook_skip.py  test_ocr_skip.py  test_output.py
Scraper/: README.MD  __init__.py  base_scraper.py  config.txt
Tests/: test_arrivealive_scraper.py  test_base_scraper.py  test_main.py  test_rtmc_scraper.py
notebook/: accident_scraper_demo.ipynb
pdf_downloads/: 1st%20quarter%20201516Report_ocr.txt  2020---2021-Q2-State-of-Road-Safety-Report_ocr.txt  2020---2021-Q3-State-of-Road-Safety-Report_ocr.txt  2020---2021-Q4-State-of-Road-Safety-Report_ocr.txt  2nd%20quarter%20201516_ocr.txt  3rd%20Quarter%20report_ocr.txt  3rd%20quarter%20201516%20Report_ocr.txt  4th%20quarter%20201415%20Report_ocr.txt  April%20to%20June%202016%20Quartely%20report_ocr.txt  April%20to%20June%202019%20State%20of%20Road%20Safety%20Report%20preliminary_ocr.txt  April-to-June-2021-State-of-road-safety-report_ocr.txt  April-to-June-2022-State-of-Road-Safety-Report_ocr.txt  January-to-March-2022-State-of-Road-Safety-Report_ocr.txt  January-to-March-2023-State-of-Road-Safety-Report_ocr.txt  January-to-March-2023-and-2024-State-of-Road-Safety-Report_ocr.txt  July-to-Sep-2021-State-of-road-safety-report_ocr.txt  July-to-Sep-2022-State-of-Road-Safety-Report_ocr.txt  June%202009%20Road%20Traffic%20Report_ocr.txt  Mar%202008%20Report_ocr.txt  Mar%202009%20Report_ocr.txt  Mar%202010%20Report_ocr.txt  Oct%20-%20Dec%202017_ocr.txt  October-to-December-2021-State-of-Road-Safety_ocr.txt  Traffic_Report_JantoMarch2016_ocr.txt  (+17 more)
(+13 files in other folders)
